# saltanat_game

saltanat/: CMakeLists.txt  build.bat  index.html
saltanat/src/: Constants.h  Entities.cpp  Entities.h  Game.cpp  Game.h  Map.cpp  Map.h
